--- a/Sandbox.ipynb
+++ b/Sandbox.ipynb
@@ -291,6 +291,79 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What is are (in square feet) that you need to paint: 340\n",
+      "You will need 1 gallons of \n",
+      " paint to cover 340 square feet\n"
+     ]
+    }
+   ],
+   "source": [
+    "from math import ceil\n",
+    "\n",
+    "def paintCalculator():\n",
+    "    sFootage = int(input(\"What is are (in square feet) that you need to paint: \"))\n",
+    "    paintAmountNeeded = ceil(sFootage/350)\n",
+    "    print(\"You will need %d gallons of \\n paint to cover %d square feet\" % (paintAmountNeeded, sFootage))\n",
+    "    \n",
+    "paintCalculator()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise 10: Self Checkout"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please enter the price of the first item: 34\n",
+      "Please enter the quantity of the first item:5\n",
+      "Please enter the price of the second item: 2\n",
+      "Please enter the quantity of the second item:10\n",
+      "Please enter the price of the third item: 60\n",
+      "Please enter the quantity of the third item:2\n",
+      "Subtotal: 310.000000\n",
+      "Tax: 17.050000\n",
+      "Total: 327.050000\n"
+     ]
+    }
+   ],
+   "source": [
+    "def selfCheckout():\n",
+    "    price1 = float(input(\"Please enter the price of the first item: \"))\n",
+    "    quant1 = float(input(\"Please enter the quantity of the first item:\"))\n",
+    "    price2 = float(input(\"Please enter the price of the second item: \"))\n",
+    "    quant2 = float(input(\"Please enter the quantity of the second item:\"))\n",
+    "    price3 = float(input(\"Please enter the price of the third item: \"))\n",
+    "    quant3 = float(input(\"Please enter the quantity of the third item:\"))\n",
+    "    \n",
+    "    totalBT = (price1 * quant1)+(price2 * quant2)+(price3 * quant3)\n",
+    "    tax = (totalBT *(5.5/100))\n",
+    "    totalWT = totalBT + tax\n",
+    "    print(\"Subtotal: %f\" % totalBT)\n",
+    "    print(\"Tax: %f\" % tax)\n",
+    "    print(\"Total: %f\" % totalWT)\n",
+    "\n",
+    "selfCheckout()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
