--- a/Sandbox.ipynb
+++ b/Sandbox.ipynb
@@ -363,6 +363,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise 11: Currency Converter"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
